--- a/hammers/mbsync/config.org
+++ b/hammers/mbsync/config.org
@@ -50,217 +50,334 @@
 *** mail box 初始化
     #+NAME: maildir
     #+BEGIN_SRC shell :var maildir=(m/resolve "${m/mail.d}")
-      mkdir -p ${maildir}/{sietium,lambda}
+      mkdir -p ${maildir}/{sietium,lambda,sjkyspa}
       echo ${maildir}
     #+END_SRC
 *** mbsync 配置（同步邮件）
-    #+BEGIN_SRC conf :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/isync/config") :noweb yes
-      IMAPAccount lambda
-      Host imap.gmail.com
-      User rising.lambda@gmail.com
-      TLSType IMAPS
-      AuthMechs PLAIN
-      #PassCmd "security find-generic-password -s lambda -w"
-      PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/credentials/authinfo.gpg 2>/dev/null | grep rising.lambda@gmail.com|awk '{print $6}'"
-      # To rotate:
-      # > security delete-generic-password -s mbsync-gandi-password
-      # > security add-generic-password -a stig@brautaset.org -s mbsync-gandi-password -w APP-SPECIFIC-PASSWORD
+**** sjkyspa
+     #+BEGIN_SRC conf :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/isync/config") :noweb yes
+       IMAPAccount sjkyspa
+       Host imap.gmail.com
+       User sjkyspa@gmail.com
+       TLSType IMAPS
+       AuthMechs PLAIN
+       #PassCmd "security find-generic-password -s sjkyspa -w"
+       PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/credentials/authinfo.gpg 2>/dev/null | grep sjkyspa@gmail.com|awk '{print $6}'"
+       # To rotate:
+       # > security delete-generic-password -s mbsync-gandi-password
+       # > security add-generic-password -a stig@brautaset.org -s mbsync-gandi-password -w APP-SPECIFIC-PASSWORD
 
-      IMAPStore lambda-remote
-      Account lambda
+       IMAPStore sjkyspa-remote
+       Account sjkyspa
 
-      MaildirStore lambda-local
-      SubFolders Verbatim
-      Path <<maildir()>>/lambda/
-      Inbox <<maildir()>>/lambda/INBOX
+       MaildirStore sjkyspa-local
+       SubFolders Verbatim
+       Path <<maildir()>>/sjkyspa/
+       Inbox <<maildir()>>/sjkyspa/INBOX
 
-      Channel lambda-inbox
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns INBOX
+       Channel sjkyspa-inbox
+       Far :sjkyspa-remote:
+       Near :sjkyspa-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns INBOX
 
-      Channel lambda-starred
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns [Gmail]/Starred
+       Channel sjkyspa-starred
+       Far :sjkyspa-remote:
+       Near :sjkyspa-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Starred
 
-      Channel lambda-all
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns [Gmail]/All\ Mail
+       Channel sjkyspa-all
+       Far :sjkyspa-remote:
+       Near :sjkyspa-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/All\ Mail
 
-      Channel lambda-important
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns [Gmail]/Important
+       Channel sjkyspa-important
+       Far :sjkyspa-remote:
+       Near :sjkyspa-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Important
 
-      Channel lambda-snoozed
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns [Gmail]/Snoozed
+       Channel sjkyspa-snoozed
+       Far :sjkyspa-remote:
+       Near :sjkyspa-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Snoozed
 
-      Channel lambda-sent
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns [Gmail]/Sent\ Mail
+       Channel sjkyspa-sent
+       Far :sjkyspa-remote:
+       Near :sjkyspa-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Sent\ Mail
 
-      Channel lambda-spam
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns [Gmail]/Spam
+       Channel sjkyspa-spam
+       Far :sjkyspa-remote:
+       Near :sjkyspa-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Spam
 
-      Channel lambda-drafts
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns [Gmail]/Drafts
+       Channel sjkyspa-drafts
+       Far :sjkyspa-remote:
+       Near :sjkyspa-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Drafts
 
-      Channel lambda-trash
-      Far :lambda-remote:
-      Near :lambda-local:
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
-      Patterns [Gmail]/Trash
+       Channel sjkyspa-trash
+       Far :sjkyspa-remote:
+       Near :sjkyspa-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Trash
 
-      IMAPAccount sietium
-      Host imap.qiye.aliyun.com
-      User neo@sietium.com
-      TLSType IMAPS
-      AuthMechs LOGIN
-      PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/credentials/authinfo.gpg 2>/dev/null | grep neo@sietium.com | awk '{print $6}'"
-      #PassCmd "security find-generic-password -s lambda -w"
+       Group sjkyspa
+       Channel sjkyspa-inbox
+       Channel sjkyspa-starred
+       Channel sjkyspa-snoozed
+       Channel sjkyspa-sent
+       Channel sjkyspa-spam
+       Channel sjkyspa-drafts
+       Channel sjkyspa-trash
+       Channel sjkyspa-important
+       Channel sjkyspa-all
+     #+END_SRC
 
-      # To rotate:
-      # > security delete-generic-password -s mbsync-gandi-password
-      # > security add-generic-password -a stig@brautaset.org -s mbsync-gandi-password -w APP-SPECIFIC-PASSWORD
+**** lambda
+     #+BEGIN_SRC conf :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/isync/config") :noweb yes
+       IMAPAccount lambda
+       Host imap.gmail.com
+       User rising.lambda@gmail.com
+       TLSType IMAPS
+       AuthMechs PLAIN
+       #PassCmd "security find-generic-password -s lambda -w"
+       PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/credentials/authinfo.gpg 2>/dev/null | grep rising.lambda@gmail.com|awk '{print $6}'"
+       # To rotate:
+       # > security delete-generic-password -s mbsync-gandi-password
+       # > security add-generic-password -a stig@brautaset.org -s mbsync-gandi-password -w APP-SPECIFIC-PASSWORD
 
-      IMAPStore sietium-remote
-      Account sietium
+       IMAPStore lambda-remote
+       Account lambda
 
-      MaildirStore sietium-local
-      SubFolders Verbatim
-      Path <<maildir()>>/sietium/
-      Inbox <<maildir()>>/sietium/INBOX
+       MaildirStore lambda-local
+       SubFolders Verbatim
+       Path <<maildir()>>/lambda/
+       Inbox <<maildir()>>/lambda/INBOX
 
-      Channel sietium-inbox
-      Far :sietium-remote:INBOX
-      Near :sietium-local:INBOX
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
+       Channel lambda-inbox
+       Far :lambda-remote:
+       Near :lambda-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns INBOX
 
-      Channel sietium-drafts
-      Far :sietium-remote:Drafts
-      Near :sietium-local:Drafts
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
+       Channel lambda-starred
+       Far :lambda-remote:
+       Near :lambda-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Starred
 
-      Channel sietium-trash
-      Far :sietium-remote:Trash
-      Near :sietium-local:Trash
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
+       Channel lambda-all
+       Far :lambda-remote:
+       Near :lambda-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/All\ Mail
 
-      Channel sietium-sent
-      Far :sietium-remote:Sent
-      Near :sietium-local:Sent
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
+       Channel lambda-important
+       Far :lambda-remote:
+       Near :lambda-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Important
 
-      Channel sietium-spam
-      Far :sietium-remote:Spam
-      Near :sietium-local:Spam
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
+       Channel lambda-snoozed
+       Far :lambda-remote:
+       Near :lambda-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Snoozed
 
-      Channel sietium-archive
-      Far :sietium-remote:Archive
-      Near :sietium-local:Archive
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
+       Channel lambda-sent
+       Far :lambda-remote:
+       Near :lambda-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Sent\ Mail
 
-      Channel sietium-gb2
-      Far :sietium-remote:GB2
-      Near :sietium-local:GB2
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
+       Channel lambda-spam
+       Far :lambda-remote:
+       Near :lambda-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Spam
 
-      Channel sietium-patent
-      Far :sietium-remote:Patent
-      Near :sietium-local:Patent
-      Sync All
-      Create Both
-      Expunge Both
-      SyncState *
+       Channel lambda-drafts
+       Far :lambda-remote:
+       Near :lambda-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Drafts
 
-      Group sietium
-      Channel sietium-inbox
-      Channel sietium-drafts
-      Channel sietium-trash
-      Channel sietium-sent
-      Channel sietium-spam
-      Channel sietium-archive
-      Channel sietium-gb2
-      Channel sietium-patent
+       Channel lambda-trash
+       Far :lambda-remote:
+       Near :lambda-local:
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+       Patterns [Gmail]/Trash
 
-      Group lambda
-      Channel lambda-inbox
-      Channel lambda-starred
-      Channel lambda-snoozed
-      Channel lambda-sent
-      Channel lambda-spam
-      Channel lambda-drafts
-      Channel lambda-trash
-      Channel lambda-important
-      Channel lambda-all
+       Group lambda
+       Channel lambda-inbox
+       Channel lambda-starred
+       Channel lambda-snoozed
+       Channel lambda-sent
+       Channel lambda-spam
+       Channel lambda-drafts
+       Channel lambda-trash
+       Channel lambda-important
+       Channel lambda-all
+     #+END_SRC
+     
+**** sietium
+     #+BEGIN_SRC conf :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/isync/config") :noweb yes
+       IMAPAccount sietium
+       Host imap.qiye.aliyun.com
+       User neo@sietium.com
+       TLSType IMAPS
+       AuthMechs LOGIN
+       PassCmd "gpg --for-your-eyes-only --no-tty -qd ~/credentials/authinfo.gpg 2>/dev/null | grep neo@sietium.com | awk '{print $6}'"
+       #PassCmd "security find-generic-password -s lambda -w"
 
-    #+END_SRC
+       # To rotate:
+       # > security delete-generic-password -s mbsync-gandi-password
+       # > security add-generic-password -a stig@brautaset.org -s mbsync-gandi-password -w APP-SPECIFIC-PASSWORD
+
+       IMAPStore sietium-remote
+       Account sietium
+
+       MaildirStore sietium-local
+       SubFolders Verbatim
+       Path <<maildir()>>/sietium/
+       Inbox <<maildir()>>/sietium/INBOX
+
+       Channel sietium-inbox
+       Far :sietium-remote:INBOX
+       Near :sietium-local:INBOX
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+
+       Channel sietium-drafts
+       Far :sietium-remote:Drafts
+       Near :sietium-local:Drafts
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+
+       Channel sietium-trash
+       Far :sietium-remote:Trash
+       Near :sietium-local:Trash
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+
+       Channel sietium-sent
+       Far :sietium-remote:Sent
+       Near :sietium-local:Sent
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+
+       Channel sietium-spam
+       Far :sietium-remote:Spam
+       Near :sietium-local:Spam
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+
+       Channel sietium-archive
+       Far :sietium-remote:Archive
+       Near :sietium-local:Archive
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+
+       Channel sietium-gb2
+       Far :sietium-remote:GB2
+       Near :sietium-local:GB2
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+
+       Channel sietium-patent
+       Far :sietium-remote:Patent
+       Near :sietium-local:Patent
+       Sync All
+       Create Both
+       Expunge Both
+       SyncState *
+
+       Group sietium
+       Channel sietium-inbox
+       Channel sietium-drafts
+       Channel sietium-trash
+       Channel sietium-sent
+       Channel sietium-spam
+       Channel sietium-archive
+       Channel sietium-gb2
+       Channel sietium-patent
+     #+END_SRC
 
 *** mbsync pre-sync
     #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/isync/hooks/pre-sync") :tangle-mode (identity #o755) :shebang #!/bin/bash :noweb yes :comments link
