--- a/hammers/emacs/os.org
+++ b/hammers/emacs/os.org
@@ -39,6 +39,7 @@
                                           "XDG_CONFIG_HOME"
                                           "XDG_DATA_HOME"
                                           "XDG_CACHE_HOME"
+                                          "XDG_STATE_HOME"
                                           "GNUPGHOME"
                                           "PROXYCHAINS_CONF_FILE"
                                           "NOTMUCH_CONFIG"
