--- a/hammers/notmuch/config.org
+++ b/hammers/notmuch/config.org
@@ -99,7 +99,7 @@
 
 *** pre hook
     #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/notmuch/default/hooks/pre-new") :tangle-mode (identity #o755) :shebang #!/bin/bash :noweb yes :comments link
-      proxychains4 -q mbsync -c ${XDG_CONFIG_HOME}/mbsync/config -a
+      # proxychains4 -q mbsync -c ${XDG_CONFIG_HOME}/mbsync/config -a
       notmuch new --no-hooks
     #+END_SRC
 *** post hook
@@ -167,12 +167,12 @@
       done
       echo "moving $(notmuch count --output=files --exclude=false folder:lambda/INBOX AND NOT tag:inbox) messages to the lambda/[Gmail]/All Mail"
       for i in $(notmuch search --exclude=false --output=files folder:lambda/INBOX AND NOT tag:inbox); do
-          move $i "<<maildir()>>/lambda/[Gmail]/All\ Mail/cur"
+          move $i "<<maildir()>>/lambda/[Gmail]/All Mail/cur"
       done
 
       echo "moving $(notmuch count --output=files --exclude=false folder:lambda/INBOX AND tag:sent) messages to the lambda/[Gmail]/Send Mail"
       for i in $(notmuch search --exclude=false --output=files folder:lambda/INBOX AND tag:sent); do
-          move $i "<<maildir()>>/lambda/[Gmail]/Sent\ Mail"
+          move $i "<<maildir()>>/lambda/[Gmail]/Sent Mail"
       done
 
       echo "moving $(notmuch count --output=files --exclude=false folder:sjkyspa/INBOX AND tag:spam) spam messages to the sjkyspa/[Gmail]/Spam"
@@ -181,12 +181,12 @@
       done
       echo "moving $(notmuch count --output=files --exclude=false folder:sjkyspa/INBOX AND NOT tag:inbox) messages to the sjkyspa/[Gmail]/All Mail"
       for i in $(notmuch search --exclude=false --output=files folder:sjkyspa/INBOX AND NOT tag:inbox); do
-          move $i "<<maildir()>>/sjkyspa/[Gmail]/All\ Mail/cur"
+          move $i "<<maildir()>>/sjkyspa/[Gmail]/All Mail/cur"
       done
 
       echo "moving $(notmuch count --output=files --exclude=false folder:sjkyspa/INBOX AND  tag:sent) messages to the sjkyspa/[Gmail]/Send Mail"
       for i in $(notmuch search --exclude=false --output=files folder:sjkyspa/INBOX AND tag:sent); do
-          move $i "<<maildir()>>/sjkyspa/[Gmail]/Sent\ Mail"
+          move $i "<<maildir()>>/sjkyspa/[Gmail]/Sent Mail"
       done
     #+END_SRC
 
